refactor(shared): add common utility classes and improve code readability
- Create StreamUtils class for common stream operations
  * Add filter, map, count, groupAndSum, sum, max/min methods
  * Add date range filtering utilities for LocalDateTime and LocalDate
  * Provide null-safe collection operations

- Create RangeUtils class for BigDecimal range validation
  * Add isInRange, meetsMinimum, meetsMaximum methods
  * Add isPositive, isNonNegative, isPercentage validators
  * Provide predicate factory methods for filtering

- Create DateUtils class for date range operations
  * Add date range validation and filtering utilities
  * Add current period boundary helpers (month/year)
  * Provide predicate factory methods for date filtering

- Create CollectionUtils class for collection operations
  * Add null-safe collection operations (isEmpty, size, filter, map)
  * Add grouping, finding, and boolean check utilities
  * Provide type-safe collection transformations

- Refactor InvestmentController to use RangeUtils
  * Replace custom range validation with utility methods
  * Simplify price and dividend yield filtering logic

- Refactor DashboardService to use StreamUtils
  * Replace repetitive stream operations with utility methods
  * Improve readability of financial calculations
  * Consolidate date filtering and aggregation logic

- Refactor BaseService predicate creation
  * Extract predicate creation into dedicated helper methods
  * Improve readability of filter predicate logic

- Refactor TransactionService updateEntityFromDTO
  * Break down complex method into focused helper methods
  * Improve maintainability and testability

- Update tests to reflect refactored code
  * Fix test imports and method signatures
  * Ensure all existing functionality remains intact

Benefits:
- Eliminated 15+ instances of code duplication
- Improved maintainability with single source of truth
- Enhanced readability with self-documenting utility methods
- Better testability with f